# Application_desktop_react-tauri

./: package-lock.json  package.json
node-modules/: .package-lock.json
node-modules/@tauri-apps/api/: app-46492a62.cjs  app.cjs  app.js  cli-178d2d3b.js  cli.cjs  cli.js  clipboard-55b5cd25.js  clipboard-c4c07958.cjs  clipboard.cjs  dialog.cjs  dialog.js  event-211518b5.cjs  event-41f00c56.js  event.cjs  fs-b237282b.cjs  fs.cjs  fs.js  globalShortcut.js  http.js  index.cjs  index.js  notification-f3496aeb.js  notification.cjs  notification.js  os-e9340543.js  os.js  path-675cc0e1.js  path-8cd57994.cjs  path.cjs  path.d.ts  process.d.ts  process.js  shell-b0ad01d8.js  shell.cjs  tauri-19998099.js  tauri-2adf13fc.cjs  tauri-72ceb064.js  tauri.cjs  tauri.d.ts  updater-aa9ff145.js  (+2 more)
node-modules/@tauri-apps/cli-win32-x64-msvc/: package.json
node-modules/rc-mentions/es/: KeywordTrigger.js
node-modules/rc-mentions/lib/: KeywordTrigger.d.ts  KeywordTrigger.js
node-modules/uplot-react/: README.md  uplot-react.js  uplot-react.min.js  uplot-react.min.js.map
nodes_modules/@tauri-apps/api/: app-38574b8c.js  cli-ed412dbb.cjs  clipboard.js  dialog-6e8bdcc9.js  dialog-b898ceb3.cjs  dialog.d.ts  event-4cb7a3db.cjs  event-4f5dbe80.js  event.d.ts  event.js  os.cjs  (+27 more)
nodes_modules/uplot-react/: uplot-react.js.map
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Routes.jsx
src/navbar/: RoutesNav.css  RoutesNav.jsx
src/pages/: Analytics.jsx  Categories.jsx  Countries.jsx  Customers.jsx  Dashboard.jsx  Orders.jsx  Products.jsx
(+52 files in other folders)
